--- a/Frontend/pyproject.toml
+++ b/Frontend/pyproject.toml
@@ -29,6 +29,11 @@ python = ">=3.12,<3.13"
 python-dotenv = { version = "*" }
 streamlit = { version = "*" }
 streamlit-pydantic = { git = "https://github.com/HIL340/streamlit-pydantic.git", branch = "pydantic-2.7" }
+uvicorn = "*"
+sqlalchemy = "*"
+pydantic = "*"
+databases = "*"
+pandas = "*"
 
 
 [build-system]
